Update PWeb2023-Tugas04-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html

--- a/PWeb2023-Tugas04-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html
+++ b/PWeb2023-Tugas04-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html
@@ -11,6 +11,10 @@
 		<h3><u> MASUKKAN BIODATA DIRI ANDA</u></h3>
 		<form method="POST">
 			<div>
+				<img src="foto.jpeg" width="100" align="center">
+			</div>
+			<br>
+			<div>
 				<label for="nama">Nama  :</label>
 				<input type="text" id="nama" name="nama" placeholder="Nama lengkap anda">
 			</div>
