--- a/PWeb2023-Tugas06-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html
+++ b/PWeb2023-Tugas06-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html
@@ -7,24 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="SKRIP.css">
 </head>
 <body>
-	<div class="navigasi">
-		<table cellspacing="10">
-			<tr>
-				<td>
-					<a href="home.html">Home </a>
-				</td>
-				<td>
-					<a href="myProfile.html">My Profile</a>
-				</td>
-				<td>
-					<a href="contact.html">Contact</a>
-				</td>			
-			</tr>
-		</table>
-	</div>
+	<nav class="navi">
+		<ul>
+			<li><a href="PWeb2023-Tugas06-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html">Home</a></li>
+			<li><a href="Myprofile.html">My Profile</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
 	<br>
 		<header>
-			<img src="foto.jpeg" width="175" height="200" style="border-radius: 50%;">
+			<img src="foto.jpeg" width="185" height="200" style="border-radius: 50%;">
 			<h1>Asfanissa Ainun Salsabila</h1>
 		</header>
 		<div class="about">
