--- a/contact.html
+++ b/contact.html
@@ -4,59 +4,33 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Asfanissa</title>
-	<style>
-		body{
-			background-color: #A0A1BA;
-			background-size: cover;
-		}
-		.navigasi{
-			background-color: #02438F; 
-			text-align: right;
-			background-size: cover;
-		}
-		.kontak{
-			text-align: center;
-			font-family: serif;
-			font-size: 20px;
-            padding: 50px;
-
-            
-		}
-	
-	</style>
+	<link rel="stylesheet" type="text/css" href="contact.css">
 </head>
 <body>
-	<div class="navigasi">
-		<table cellspacing="10">
-			<tr>
-				<td>
-					<a href="PWeb2023-Tugas05-SKRIP-I-2200018425-Asfanissa Ainun Salsabila" style="color: white;" target="_blank">Home </a>
-				</td>
-				<td>
-					<a href="myProfile.html" style="color: white;" target="_blank">My Profile</a>
-				</td>
-				<td>
-					<a href="contact.html" style="color: white;" target="_blank">Contact</a>
-				</td>			
-			</tr>
-		</table>
+	<nav class="navi">
+		<ul>
+			<li><a href="PWeb2023-Tugas06-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html">Home</a></li>
+			<li><a href="Myprofile.html">My Profile</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+	<br>
+	<div class="rapi">
+		<h1 >Contact Me</h1>
 	</div>
+	
 	<div class="kontak">
-		<div style="background-color: #02438F; width: 300px; margin: 0 auto; color: white;">
-			<h1>Contact Me</h1>
-		</div>
-		
 		<form>
-			<label for="nama" widt>Nama:</label>
-			<input type="text" id="nama" name="nama" placeholder="Nama anda"><br><br>
-			<label for="email">Email:</label>
-			<input type="email" id="email" name="email" placeholder="Masukkan email aktif anda"><br><br>
-			<label>Pesan:</label>
-			<textarea placeholder="Ketikkan pertanyaan atau pesan"></textarea>
+			<label for="nama" widt>Nama:</label><br>
+			<input type="text" id="nama" name="nama" size="40px"><br><br>
+			<label for="email">Email:</label><br>
+			<input type="email" id="email" name="email" size="40px"><br><br>
+			<label>Pesan:</label><br>
+			<textarea class="input"></textarea><br><br>
 		</form>
 	</div>
 	<hr>
-	<footer style="text-align: center;">
+	<footer>
         <p>Copyright &copy; 2023 Asfanissa Ainun Salsabila.</p>
     </footer>
 </body>
