--- a/myProfile.html
+++ b/myProfile.html
@@ -4,99 +4,58 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Profile Asfanissa Ainun Salsabila</title>
-	<style>
-		body{
-			background-color: #A0A1BA;
-			background-size: cover;
-		}
-		.navigasi{
-			background-color: #02438F; 
-			text-align: right;
-			background-size: cover;
-		}
-		.tabel{
-  			height: 100%;
-  			font-family: sans-serif;
-  			font-size: 12;
-  			
-		}
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="myprofile.css">
 </head>
 <body>
-	<div class="navigasi">
-		<table cellspacing="10">
-			<tr>
-				<td>
-					<a href="PWeb2023-Tugas05-SKRIP-I-2200018425-Asfanissa Ainun Salsabila" style="color: white;" target="_blank">Home </a>
-				</td>
-				<td>
-					<a href="myProfile.html" style="color: white;" target="_blank">My Profile</a>
-				</td>
-				<td>
-					<a href="contact.html" style="color: white;" target="_blank">Contact</a>
-				</td>			
-			</tr>
-		</table>
-	</div>
+	<nav class="navi">
+		<ul>
+			<li><a href="PWeb2023-Tugas06-SKRIP-I-2200018425-Asfanissa Ainun Salsabila.html">Home</a></li>
+			<li><a href="myprofile.html">My Profile</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
 	<br>
-	
-	<div class="tabel">
-			<div>
-				<br>
-				<img src="foto.jpeg" width="200" align="right">
-			</div>
-		<table>
+	<br>
+	<h1>Biodata diri</h1>
+	<hr width="700px">
+		<table cellpadding="10px" width="700px" align="center">
 			<tr>
 				<td>
-					<p>Nama Lengkap:</p>
+					<p>Nama Lengkap</p>
 				</td>
-				<td>:</td>
-				<td><p>Asfanissa Ainun Salsabila</p></td>
+				<td>: Asfanissa Ainun Salsabila</td>
+				<td rowspan="7"><img src="foto.jpeg" height="200px" width="160px"></td>
 			</tr>
-			</div>
 			<tr>
-				<td><p>Tempat, Tanggal Lahir</p></td>
-				<td>:</td>
-				<td>Bantul, 1 Juli 2004</td>
+				<td>Tempat, Tanggal Lahir</td>
+				<td>: Bantul, 1 Juli 2004</td>
 			</tr>
 			<tr>
 				<td><p>Warga Negara</p></td>
-				<td>:</td>
-				<td><p>Indonesia</p></td>
+				<td>: Indonesia</td>
 			</tr>
 			<tr>
-				<td><p>Pendidikan</p></td>
-				<td>:</td>
-				<td><p>Perguruan Tinggi</p></td>
+				<td>Pendidikan</t>
+				<td>: Perguruan Tinggi</td>
 			</tr>
 			<tr>
-				<td><p>Program Studi</p></td>
-				<td>:</td>
-				<td><p>Informatika</p></td>
+				<td>Program Studi</td>
+				<td>: Informatika</td>
 			</tr>
 			<tr>
-				<td><p>Skill</p></td>
-				<td>:</td>
-				<td><ul>
-					<li>
-						C++ (beginner)
-					</li>
-					<li>
-						HTML (beginner)
-					</li>
-				</ul></td>
+				<td>Skill </td>
+				<td>
+					: C++ (beginner) dan HTML (beginner)
+				</td>
 			</tr>
 			<tr>
-				<td><p>Email</p></td>
-				<td>:</td>
-				<td><p>asfsalbila@gmail.com</p></td>
+				<td>Email</td>
+				<td>: asfsalbila@gmail.com</td>
 			</tr>
 		</table>
-		</div>
 	</div>
 	<hr>
-    <footer style="text-align: center;">
+    <footer>
         <p>Copyright &copy; 2023 Asfanissa Ainun Salsabila.</p>
     </footer>
 </body>
